--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class= "footer">
-    <p>Copyright© {{site.author.name}} 2020. All right reserved. Theme designed by <a href="https://alessiofranceschi.me/">Alessio Franceschi</a>.</p>
+    <p>Copyright© {{site.author.name}} 2020. All right reserved. Website designed by <a href="https://alessiofranceschi.me/">Alessio Franceschi</a>.</p>
 </footer>
