--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -16,6 +16,14 @@
         max-height: 450px;
         @include border(7px);
     }
+    video{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 15px;
+        max-width: 100%;
+        @include border(7px);
+    }
 }
 
 .continue-reading{
