Gif used as featured img now links to the post
Gif used as featured image in the homepage now links to the relative post

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ title: Home
         <a href="{{ post.url | relative_url }}"><img src="{{ post.image | relative_url }}"/></a>
         {% endif %}
         {% if post.video %}
-            {% include gif.html filename = post.video %}
+            <a href="{{ post.url | relative_url }}">{% include gif.html filename = post.video %}</a>
         {% endif %}
     </div>
     {% endif %}
