Using system stack for font and removed contact form

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
 ---
 ---
 
-@import "base", "typography", "header", "post", "home", "footer", "paginator", "archive", "scrollbar", "contact", "related-posts", "mobile", "custom";
+@import "base", "typography", "header", "post", "home", "footer", "paginator", "contact", "related-posts", "mobile", "custom";
