--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -52,7 +52,6 @@ html{
   color: #fff;
   display: block;
   font-size: larger;
-  font-family: 'Montserrat', sans-serif;
 }
 
 .y{
@@ -99,7 +98,6 @@ blockquote {
 #markdown-toc::before {
   content: "Contents";
   font-size: 1.1rem;
-  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
 }
 
@@ -113,7 +111,6 @@ blockquote {
   line-height: 25px;
   li{
     a{
-      font-family: 'PT Serif', serif;
       text-decoration: none;
     }
     a:hover{
@@ -125,3 +122,36 @@ blockquote {
   }
 }
 //End ToC
+
+//Archive
+.archive-link{
+  text-decoration: none;
+  color: black;
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+.archive-link:hover{
+  text-decoration: underline;
+}
+//End Archive
+
+//Scrollbar
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+  border: 1px solid #d5d5d5;
+  padding-top: 5px;
+  border-radius: 30px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 30px;
+  background: #eeeeee;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 30px;
+  background: #b0b0b0;
+}
+//End Scrollbar
