--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
     <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/feed.xml" />
 
     <!-- FAVICON -->
-    <link rel="icon" href="{{"assets/favicon.ico" | relative_url }}" type="image/x-icon">
-    <link rel="shortcut icon" href="{{"assets/favicon.ico" | relative_url }}" type="image/x-icon">
+    <link rel="icon" href="{{"assets/icon.jpg" | relative_url }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{"assets/icon.jpg" | relative_url }}" type="image/x-icon">
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
