--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,15 +1,35 @@
 ---
 layout: default
-title: Archive
 ---
 
-{% assign postsByDate =
-    site.posts | group_by_exp:"post", "post.date | date: '%B %Y'" %}
-{% for year in postsByDate %}
-  <h2 class = "archive-date" id = "date-{{post.date | date: "%B %Y"}}">{{ year.name }}</h2>
-    <ul>
-      {% for post in year.items %}
-        <li><a class = "archive-link" href="{{ post.url | relative_url}}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-{% endfor %}
+{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+  {% include page__hero.html %}
+{% elsif page.header.video.id and page.header.video.provider %}
+  {% include page__hero_video.html %}
+{% endif %}
+
+{% if page.url != "/" and site.breadcrumbs %}
+  {% unless paginator %}
+    {% include breadcrumbs.html %}
+  {% endunless %}
+{% endif %}
+
+<div id="main" role="main">
+  {% include sidebar.html %}
+
+  <div class="archive">
+    {% unless page.header.overlay_color or page.header.overlay_image %}
+      <h1 id="page-title" class="page__title">{{ page.title }}</h1>
+    {% endunless %}
+    <!-- devinlife comment : added google adsense sidebar -->
+    {% if page.toc_ads %}
+      <aside class="sidebar__right sticky">
+        <nav class="toc-custom">
+          {% include GoogleAdSenseSidbar.html %}
+        </nav>
+      </aside>
+    {% endif %}
+    <!-- devinlife comment : end -->
+    {{ content }}
+  </div>
+</div>
