--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,7 +3,7 @@
     <div id="disqus_thread"></div>
 
     <script id="loadDisqus" type="text/javascript">
-      var disqus_loaded = false;
+      var disqus_loaded = true;
       var disqus_shortname = "{{ site.data.settings.disqus.disqus_shortname }}";
       var disqus_identifier = "{{ page.url }}";
       function loadDisqus() {
