--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -15,5 +15,5 @@
         document.getElementById("load-comments").style.display = "none";
       };
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
+<!--     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript> -->
 </section>
