--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,7 +3,7 @@
     <div id="disqus_thread"></div>
 
     <script id="loadDisqus" type="text/javascript">
-      var disqus_loaded = true;
+      var disqus_loaded = false;
       var disqus_shortname = "{{ site.data.settings.disqus.disqus_shortname }}";
       var disqus_identifier = "{{ page.url }}";
       function loadDisqus() {
@@ -15,5 +15,5 @@
         document.getElementById("load-comments").style.display = "none";
       };
     </script>
-<!--     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript> -->
+     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
 </section>
