--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -10,7 +10,8 @@
         var e = document.createElement('script'); 
         e.type = 'text/javascript'; 
         e.async = true;
-        e.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        e.src = 'https://https-u00938-github-io.disqus.com/embed.js';
+        
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(e);
         document.getElementById("load-comments").style.display = "none";
       };
