--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -5,7 +5,7 @@
     <script id="loadDisqus" type="text/javascript">
       var disqus_loaded = true;
       var disqus_shortname = "{{ site.data.settings.disqus.disqus_shortname }}";
-      var disqus_identifier = "{{ 'https://u00938.github.io' }}";
+      var disqus_identifier = "https://u00938.github.io{{ page.url }}";
       function loadDisqus() {
         var e = document.createElement('script'); 
         e.type = 'text/javascript'; 
