--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,20 +1,21 @@
-<section class="disqus">
-    <p id="load-comments" onclick="loadDisqus()">Load Comments</p>
-    <div id="disqus_thread"></div>
+<div id="disqus_thread"></div>
+<script>
 
-    <script id="loadDisqus" type="text/javascript">
-      var disqus_loaded = true;
-      var disqus_shortname = "{{ site.data.settings.disqus.disqus_shortname }}";
-      var disqus_identifier = "https://u00938.github.io";
-      function loadDisqus() {
-        var e = document.createElement('script'); 
-        e.type = 'text/javascript'; 
-        e.async = true;
-        e.src = 'https://https-u00938-github-io.disqus.com/embed.js';
-        
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(e);
-        document.getElementById("load-comments").style.display = "none";
-      };
-    </script>
-     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
-</section>
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = "https://https://u00938.github.io";  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-u00938-github-io.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
