--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,9 @@
-<div id="disqus_thread"></div>
-<script>
+<section class="disqus">
+    <p id="load-comments" onclick="loadDisqus()">Load Comments</p>
 
+<div id="disqus_thread"></div>
+<script id="loadDisqus" type="text/javascript">
+var disqus_loaded = true;
 /**
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
@@ -10,12 +13,16 @@ this.page.url = "{{ page.url | absolute_url }}";  /* Replace PAGE_URL with your 
 this.page.identifier = "{{ page.id }}"; /* Replace PAGE_IDENTIFIER with your page's unique identifier variable */
 };
 
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://https-u00938-github-io.disqus.com/embed.js';
+function loadDisqus() {
+        var e = document.createElement('script'); 
+        e.type = 'text/javascript'; 
+        e.async = true;
+        var d = document, s = d.createElement('script');
+        e.src = 'https://https-u00938-github-io.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(e);
+        document.getElementById("load-comments").style.display = "none";
+      };
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                             
