--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -14,8 +14,7 @@ title: Categories
     <a name="{{ category_name | slugize }}"></a>
     <ul>
     {% for post in site.categories[category_name] %}
-      <li><a class="archive-link" href="{{ post.url | relative_url}}">{{post.title}}</a></li>
-      <a href="{{ post.url }}#disqus_thread">Post a comment</a>
+      <li><a class="archive-link" href="{{ post.url | relative_url}}">{{post.title}}</a><a href="{{ post.url }}#disqus_thread">Post a comment</a></li>
     {% endfor %}
       <script id="dsq-count-scr" src="//https-u00938-github-io.disqus.com/count.js" async></script>
     </ul>
