--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 a.comment {
-    margin-left: 10px;
+    margin-left: 0.9rem;
     color: blue;
     font-size: 0.9rem;
 }
